<resources>
    <string name="app_name">DigiCard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorMessage">An error occurred, Please try again later</string>
    <string name="orConnectWithGoogle">Or connect with Google</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="email_error">Email Error</string>
    <string name="hint_password">Password</string>
    <string name="password_error">Password Error</string>
    <string name="btn_login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="progress_text">Please Wait</string>
    <string name="hint_full_name">Full Name</string>
    <string name="_1">1</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">Profile Email</string>
    <string name="upload_image">Upload Image</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="accountCreatedSuccessfully">Account created successfully</string>
    <string name="accountUpdatedSuccessfully">Account Updated Successfully</string>
    <string name="errorCreateAccount">An error occurred when trying to create account, please check your internet connection and try again.</string>
    <string name="ok">OK</string>
    <string name="payment">Payment</string>
    <string name="error">Error</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="add_your_name_here">Add Your Name Here</string>
    <string name="addUserName">Please add your name first!</string>
    <string name="addUserImage">Please add an image to your account!</string>
    <string name="tags">Tags</string>
    <string name="no_internet">OOPS! NO INTERNET</string>
    <string name="check_internet">Please check your network connection and try again later</string>
    <string name="home_">Home</string>
    <string name="hint_name">Name</string>
    <string name="hint_number">Phone Number</string>
    <string name="hint_github">GitHub Profile</string>
    <string name="hint_city">City</string>
    <string name="hint_country">Country</string>
    <string name="hint_skills">Add Skills (separate each skill by comma)</string>
    <string name="set_profile">Set Profile</string>
    <string name="user_name">Name : </string>
    <string name="user_email">Email : </string>
    <string name="number">Phone Number : </string>
    <string name="skills">Skills : </string>
    <string name="github">GitHub : </string>
    <string name="location">Location : </string>
    <string name="my_contacts">My Contacts</string>
    <string name="save_as_contact">Save As Contact</string>
    <string name="no_contacts">NO CONTACTS</string>
    <string name="hint_confirm_password">confirm password</string>
</resources>