<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="fragment"
            type="com.example.digicard.presentation.fragments.authentication.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.authentication.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUp_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/login"
            android:textColor="@color/mainText"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signUp_tv">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginEmailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/emailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_error"
                android:visibility="gone"
                android:fontFamily="@font/metropolis_regular"
                android:textColor="@color/primary"
                android:textSize="9sp"
                android:layout_marginTop="5dp"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/LoginPassEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@color/mainText"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_error"
                android:visibility="gone"
                android:fontFamily="@font/metropolis_regular"
                android:textColor="@color/primary"
                android:textSize="9sp"
                android:layout_marginTop="5dp"
                tools:ignore="SmallSp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:elevation="10dp"
                android:onClick="@{()->fragment.signInUser()}"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/bt_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/metropolis_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/mainText"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signUpTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/metropolis_regular"
                    android:text="@string/sign_up"
                    android:textColor="@color/primary"
                    android:textSize="14sp"
                    android:onClick="@{()-> fragment.signUpUser()}"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>