<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.digicard.presentation.fragments.main.ProfileFragment" />
        <variable
            name="userInfo"
            type="com.example.digicard.model.UserInfoModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.main.ProfileFragment">

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/set_profile"
            android:textColor="@color/mainText"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfileImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="@color/primary"
            app:civ_border_width="2.6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile"
            android:onClick="@{()->fragment.setProfilePhoto()}"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/addNewUserProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15.60dp"
            android:layout_marginBottom="7.80dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/userProfileImage"
            app:layout_constraintEnd_toEndOf="@+id/userProfileImage" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addNewUserProfileImage">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingHorizontal="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_name"
                android:text="@{userInfo!=null?userInfo.userName:`Name`}"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="10dp"
                android:id="@+id/userEmailEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_email"
                android:text="@{userInfo!=null?userInfo.userEmail:`Email`}" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@color/mainText"
                android:paddingHorizontal="20dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_number"
                android:text="@{userInfo!=null?userInfo.userPhone:`Phone Number`}"
                android:inputType="number"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/githubProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingHorizontal="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_github"
                android:text="@{userInfo!=null?userInfo.userGithub:`GitHub`}"
                android:inputType="text"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/skills"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingHorizontal="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_skills"
                android:text="@{userInfo!=null?userInfo.userSkills:`Add Skills`}"
                android:inputType="text"
                android:maxLines="1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/mainText"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/metropolis_regular"
                    android:hint="@string/hint_city"
                    android:paddingHorizontal="20dp"
                    android:text="@{userInfo!=null?userInfo.userCity:`City`}"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/country"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/country"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:paddingHorizontal="20dp"
                    android:textColor="@color/mainText"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/metropolis_regular"
                    android:hint="@string/hint_country"
                    android:text="@{userInfo!=null?userInfo.userCountry:`Country`}"
                    android:inputType="text"
                    android:maxLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/city"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpBtn_signUpPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:elevation="10dp"
                android:onClick="@{()->fragment.submitUserInfo()}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>